zwavejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: zwavejs
    app.kubernetes.io/name: zwavejs2mqtt
    app.kubernetes.io/version: 8.26.0
  name: zwavejs-zwavejs2mqtt
  namespace: zwavejs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zwavejs
      app.kubernetes.io/name: zwavejs2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zwavejs
        app.kubernetes.io/name: zwavejs2mqtt
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: NETWORK_KEY
            - name: STORE_DIR
              value: /config
            - name: TZ
              value: America/Vancouver
          # https://hub.docker.com/r/zwavejs/zwave-js-ui/tags
          image: 'zwavejs/zwave-js-ui:10.10.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /health/zwave
              port: 8091
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: zwavejs-zwavejs2mqtt
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: websocket
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8091
            timeoutSeconds: 1
          resources: {}
          securityContext:
            privileged: true
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8091
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /dev/serial/by-id/usb-0658_0200-if00
              name: usb
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/hostname: crobasaurusrex
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: zwavejs-pvc
        - hostPath:
            path: /dev/serial/by-id/usb-0658_0200-if00
            type: ''
          name: usb
