zwavejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zwavejs
    app.kubernetes.io/name: zwavejs2mqtt
    app.kubernetes.io/version: 5.0.2
  name: zwavejs-zwavejs2mqtt
  namespace: zwavejs
spec:
  ports:
    - name: http
      port: 8091
      protocol: TCP
      targetPort: http
    - name: websocket
      port: 3000
      protocol: TCP
      targetPort: websocket
  selector:
    app.kubernetes.io/instance: zwavejs
    app.kubernetes.io/name: zwavejs2mqtt
  sessionAffinity: None
  type: ClusterIP
