zwavejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
    nginx.org/websocket-services: zwavejs2mqtt
  labels:
    app.kubernetes.io/instance: zwavejs
    app.kubernetes.io/name: zwavejs2mqtt
    app.kubernetes.io/version: 5.0.2
  name: zwavejs-zwavejs2mqtt
  namespace: zwavejs
spec:
  ingressClassName: nginx
  rules:
    - host: zwave.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: zwavejs-zwavejs2mqtt
                port:
                  number: 8091
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - zwave.crobasaurusrex.ryanbeales.com
      secretName: zwave-crobasaurusrex-ryanbeales-com-tls
